--- a/Assets/WebGLTemplates/Web3Template/index.html
+++ b/Assets/WebGLTemplates/Web3Template/index.html
@@ -10,8 +10,9 @@
 
   </head>
   <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width={{{ WIDTH }}} height={{{ HEIGHT }}}></canvas>
+      <div id="unity-container" style="position: absolute; width: 100%; height: 100%">
+
+      <canvas id="unity-canvas" width={{{ WIDTH }}} height={{{ HEIGHT }}}  style="width: 100%; height: 100%"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
